clusterfest now limits to 100 states, and holds an arraylist instead of linkedlist